
syntax = "proto3";

package facade;

enum Mode {
    TERM    =  0;
    LINE    =  1;
    DRAFT   = 16;
}


service Facade {
    rpc Configure(Config) returns (Status) {}
    rpc Display(stream RawText) returns (Status) {}
    rpc Query(Empty) returns (Status) {}
}

message Empty {}

message Status {
    bool Success = 1;
    string Error = 2;
    
    string Info = 3;
} 


message RawText {

    bytes Raw       =  1;

}


message Config {
    
    bool SetDebug = 1;  bool Debug = 2;    
    bool SetMode  = 3;  Mode Mode  = 4;

    FontConfig Font     = 5;
    CameraConfig Camera = 6;
    MaskConfig Mask     = 7;

    TermConfig Terminal = 13;
    LineConfig Lines    = 14;

    

}


message FontConfig {
    bool SetName = 1;  string Name = 2;
}


message CameraConfig {
    bool SetZoom       = 1; double Zoom      = 2;
    bool SetIsometric  = 3;   bool Isometric = 4;
}


message MaskConfig {
    bool SetName = 1;  string Name = 2;
}


message TermConfig {
    GridConfig Grid = 1;  
}


message LineConfig {
    GridConfig Grid = 1;  
    bool SetDownward = 3;     bool Downward =  4;
    bool SetSpeed    = 5;   double Speed    =  6;
    bool SetAdaptive = 7;     bool Adaptive =  8;
    bool SetDrop     = 9;     bool Drop     = 10;
    bool SetSmooth   =11;     bool Smooth   = 12;
    bool SetBuffer   =13;   uint64 Buffer   = 14;  
}

message GridConfig {
    bool SetWidth    = 1;   uint64 Width    = 2;
    bool SetHeight   = 3;   uint64 Height   = 4;
    bool SetFill     = 7;   string Fill     = 8;
    bool SetVert     = 9;   string Vert     = 10;
    bool SetFrag     = 11; string Frag      = 12;
}








